[package]
name = "precompiler_first_contact"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0.0"
colour = "0.7.0"
maplit = "1.0.2"
regex = "1.8.1"
uuid = { version = "1.3.3", features = ["v4"] }
